diesel_compile_tests/tests/fail/update_requires_set.stderr
error[E0277]: the trait bound `diesel::query_builder::update_statement::SetNotCalled: QueryFragment<_>` is not satisfied
    --> tests/fail/update_requires_set.rs:14:10
     |
14   |         .execute(&mut conn);
     |          ^^^^^^^ the trait `QueryFragment<_>` is not implemented for `diesel::query_builder::update_statement::SetNotCalled`
     |
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               <&'a T as QueryFragment<DB>>
               <() as QueryFragment<DB>>
               <(T0, T1) as QueryFragment<__DB>>
               <(T0, T1, T2) as QueryFragment<__DB>>
               <(T0, T1, T2, T3) as QueryFragment<__DB>>
               <(T0, T1, T2, T3, T4) as QueryFragment<__DB>>
               <(T0, T1, T2, T3, T4, T5) as QueryFragment<__DB>>
               <(T0, T1, T2, T3, T4, T5, T6) as QueryFragment<__DB>>
             and 270 others
     = note: required because of the requirements on the impl of `QueryFragment<_>` for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>`
     = note: required because of the requirements on the impl of `ExecuteDsl<_, _>` for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::execute`
